# task-cli

./: README.md  pyproject.toml
task_cli/: main.py
task_cli.egg-info/: PKG-INFO  SOURCES.txt
