[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli"
version = "0.1.0"
description = "A simple CLI task tracker"
authors = [{ name = "Dany Fernandez" }]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
task-cli = "task_cli.main:main"